<resources>
    <string name="app_name">BLSPTest</string>
    <string name="uart_title">UART</string>
    <string name="uart_rx">Receive</string>
    <string name="uart_tx">Transmit</string>
    <string name="uart_baud">baud</string>
    <string name="uart_dev">dev</string>
    <string name="spi_title">SPI</string>
    <string name="spi_rx">Receive</string>
    <string name="spi_tx">Transmit</string>
    <string name="spi_speed">Speed</string>
    <string name="spi_dev">dev</string>
    <string name="ncs">nCS</string>
    <string name="cpol">CPOL</string>
    <string name="cpha">CPHA</string>
    <string name="transfer">TRANSFER</string>
    <string name="i2c_title">I2C</string>
    <string name="i2c_slave_id">Slave ID</string>
    <string name="i2c_Address">Address</string>
    <string name="i2c_Data">Read"/"Write Data</string>
    <string name="i2c_Read">READ</string>
    <string name="i2c_Write">WRITE</string>
    <string name="i2c_dev">dev</string>
    <string name="gpio_title">GPIO</string>
    <string name="gpio_dev">dev</string>
     <string name="gpio_offset">offset</string>
    <string name="picture">Picture</string>
    <string name="description_info">Info</string>
    <string name="error_uart_config">Please configure your serial port first.</string>
    <string name="error_gpio_config">Please configure your GPIO first.</string>
    <string name="error_i2c_config">Please configure your I2C port first.</string>
    <string name="error_spi_config">Please configure your SPI port first.</string>
    <string name="error_serial">You do not have read/write permission to the serial port.</string>
    <string name="error_i2c">You do not have read/write permission to the i2c port.</string>
    <string name="error_gpio">You do not have read/write permission to the gpio.</string>
    <string name="error_spi">You do not have read/write permission to the spi.</string>
    <string name="error_unknown">This port cannot be opened for an unknown reason.</string>
</resources>
