<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                tools:ignore="ScrollViewSize">

                <LinearLayout
                    android:id="@+id/ll_spi"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:visibility="visible">

                    <TextView
                        android:id="@+id/textView_spi_dev_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/holo_purple"
                        android:gravity="center"
                        android:text="@string/spi_title" />

                    <EditText
                        android:id="@+id/textView_spi_rx"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/spi_rx" />

                    <EditText
                        android:id="@+id/textView_spi_tx"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/spi_tx" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textView_spi_speed"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/spi_speed" />

                        <Spinner
                            android:id="@+id/textView_spi_dev"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1.5"
                            android:text="@string/spi_dev" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <CheckBox
                            android:id="@+id/checkBox_nCS"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/ncs" />

                        <CheckBox
                            android:id="@+id/checkBox_CPOL"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/cpol" />

                        <CheckBox
                            android:id="@+id/checkBox_CPHA"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/cpha" />

                        <Button
                            android:id="@+id/button_spi_transfer"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="20dp"
                            android:layout_weight="1"
                            android:text="@string/transfer" />
                    </LinearLayout>
                </LinearLayout>

                <TextView
                    android:id="@+id/textView_last_dev_title"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@android:color/holo_purple"
                    android:gravity="center"
                    android:text="END" />

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

</RelativeLayout>